
    * ``merge --preview`` now works for merges that add or modify
      symlinks (James Henstridge)

    * Upgrade bundled ConfigObj to version 4.5.1, which properly quotes #
      signs, among other small improvements. (Matt Nordhoff, #86838)

    * Use correct indices when emitting LCA conflicts.  This fixes IndexError
      errors.  (Aaron Bentley, #196780)

  API BREAKS:

    * Support for loading plugins from zip files and
      ``bzrlib.plugin.load_from_zip()`` function are deprecated.
      (Alexander Belchenko)

  TESTING:

    * The branch interface tests were invalid for branches using rich-root
      repositories because the empty string is not a valid file-id.
      (Robert Collins)

  INTERNALS:

    * New module ``tools/package_mf.py`` provide custom module finder for
      python packages (improves standard python library's modulefinder.py)
      used by ``setup.py`` script while building standalone bzr.exe.
      (Alexander Belchenko)

    * New remote method ``RemoteBzrDir.find_repositoryV2`` adding support for
      detecting external lookup support on remote repositories. This method is
      now attempted first when lookup up repositories, leading to an extra 
      round trip on older bzr smart servers. (Robert Collins)
 
    * Repository formats have a new supported-feature attribute
      ``supports_external_lookups`` used to indicate repositories which support
      falling back to other repositories when they have partial data.
      (Robert Collins)

    * The bzrdir format registry now accepts an ``alias`` keyword to
      register_metadir, used to indicate that a format name is an alias for
      some other format and thus should not be reported when describing the
      format. (Robert Collins)


bzr 1.2 2008-02-15
------------------

  BUG FIXES:

    * Fix failing test in Launchpad plugin. (Martin Pool)


bzr 1.2rc1 2008-02-13
---------------------

  NOTES WHEN UPGRADING:
  